--- a/src/framework/icons/css/oliveui-icons.css
+++ b/src/framework/icons/css/oliveui-icons.css
@@ -5,9 +5,9 @@
  */
 
 @font-face {
-    font-family: 'ngx-app-frame';
-    src: url('../fonts/ngx-app-frame.eot?m2yqa');
-    src: url('../fonts/ngx-app-frame.eot?m2yqa#iefix') format('embedded-opentype'), url('../fonts/ngx-app-frame.ttf?m2yqa') format('truetype'), url('../fonts/ngx-app-frame.woff?m2yqa') format('woff'), url('../fonts/ngx-app-frame.svg?m2yqa#ngx-app-frame') format('svg');
+    font-family: 'oliveui';
+    src: url('../fonts/oliveui.eot?m2yqa');
+    src: url('../fonts/oliveui.eot?m2yqa#iefix') format('embedded-opentype'), url('../fonts/oliveui.ttf?m2yqa') format('truetype'), url('../fonts/oliveui.woff?m2yqa') format('woff'), url('../fonts/oliveui.svg?m2yqa#oliveui') format('svg');
     font-weight: normal;
     font-style: normal;
 }
