--- a/src/framework/icons/scss/_oliveui-icons-variables.scss
+++ b/src/framework/icons/scss/_oliveui-icons-variables.scss
@@ -4,5 +4,5 @@
  * Licensed under the MIT License. See License.txt in the project root for license information.
  */
 
-$ngx-app-frame-icons-font-path: '../fonts' !default;
-$ngx-app-frame-icons-font-family: 'oliveui' !default;
+$oliveui-icons-font-path: '../fonts' !default;
+$oliveui-icons-font-family: 'oliveui' !default;
