--- a/src/framework/theme/components/stepper/stepper.component.html
+++ b/src/framework/theme/components/stepper/stepper.component.html
@@ -1,4 +1,4 @@
-<ng-template><ng-content select="nb-step"></ng-content></ng-template>
+<!-- <ng-template><ng-content select="nb-step"></ng-content></ng-template>
 <div class="header">
   <ng-container *ngFor="let step of steps; let index = index; let first = first">
 
@@ -25,4 +25,4 @@
 </div>
 <div class="step-content">
   <ng-container [ngTemplateOutlet]="selected?.content"></ng-container>
-</div>
+</div> -->
