--- a/src/playground/theme/stepper/stepper-showcase.component.html
+++ b/src/playground/theme/stepper/stepper-showcase.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<!-- <nb-card>
   <nb-card-body>
     <nb-stepper orientation="horizontal">
       <nb-step [label]="labelOne">
@@ -26,4 +26,4 @@
       </nb-step>
     </nb-stepper>
   </nb-card-body>
-</nb-card>
+</nb-card> -->
