--- a/src/playground/theme/stepper/stepper-validation.component.html
+++ b/src/playground/theme/stepper/stepper-validation.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<!-- <nb-card>
   <nb-card-body>
     <nb-stepper #stepper>
       <nb-step [stepControl]="firstForm" label="First step">
@@ -50,4 +50,4 @@
       </nb-step>
     </nb-stepper>
   </nb-card-body>
-</nb-card>
+</nb-card> -->
