--- a/src/playground/theme/stepper/stepper-vertical.component.html
+++ b/src/playground/theme/stepper/stepper-vertical.component.html
@@ -1,4 +1,4 @@
-<nb-card size="medium">
+<!-- <nb-card size="medium">
   <nb-card-body>
     <nb-stepper orientation="vertical">
       <nb-step label="First step">
@@ -67,4 +67,4 @@
       </nb-step>
     </nb-stepper>
   </nb-card-body>
-</nb-card>
+</nb-card> -->
